--- a/final_project/Gemfile
+++ b/final_project/Gemfile
@@ -2,10 +2,11 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.0'
-gem 'rails_12factor', group: :production
+
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', group: [:development]
-gem 'pg', group: [:production]
+gem 'pg'
+gem 'rails_12factor', group: :production
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
